force-app/main/default/objects/Preset_Filter__c/Preset_Filter__c.object-meta.xml
<CustomObject>
    <label>Preset Filter</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Preset Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Preset Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>