force-app/main/default/objects/Preset_Filter__c/fields/AgeFrom__c.field-meta.xml
<CustomField>
    <fullName>AgeFrom__c</fullName>
    <description>Store the Age from of the Filter</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AgeFrom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>