force-app/main/default/objects/Preset_Filter__c/fields/AgeTo__c.field-meta.xml
<CustomField>
    <fullName>AgeTo__c</fullName>
    <description>Store the End Age of the Filter</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AgeTo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>