force-app/main/default/objects/Preset_Filter__c/fields/Commrbidity__c.field-meta.xml
<CustomField>
    <fullName>Commrbidity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Commrbidity</label>
    <length>40</length>
    <type>Text</type>
</CustomField>