force-app/main/default/objects/Preset_Filter__c/fields/Community_Name__c.field-meta.xml
<CustomField>
    <fullName>Community_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Community Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>