force-app/main/default/objects/Preset_Filter__c/fields/Default_Preset__c.field-meta.xml
<CustomField>
    <fullName>Default_Preset__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tells which preset is defaulted for the user</description>
    <label>Default Preset</label>
    <type>Checkbox</type>
</CustomField>