force-app/main/default/objects/Preset_Filter__c/fields/Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ethnicity</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>