force-app/main/default/objects/Preset_Filter__c/fields/HighPriortiy__c.field-meta.xml
<CustomField>
    <fullName>HighPriortiy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HighPriority</label>
    <type>Checkbox</type>
</CustomField>