force-app/main/default/objects/Preset_Filter__c/fields/HighRisk__c.field-meta.xml
<CustomField>
    <fullName>HighRisk__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HighRisk</label>
    <length>40</length>
    <type>Text</type>
</CustomField>