force-app/main/default/objects/Preset_Filter__c/fields/InitialVisit__c.field-meta.xml
<CustomField>
    <fullName>InitialVisit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>InitialVisit</label>
    <type>TextArea</type>
</CustomField>