force-app/main/default/objects/Preset_Filter__c/fields/InitialVisit_Schedule_EndDate__c.field-meta.xml
<CustomField>
    <fullName>InitialVisit_Schedule_EndDate__c</fullName>
    <description>Store the InitialVisit Schedule DateTo of Filter</description>
    <encryptionScheme>None</encryptionScheme>
    <label>InitialVisit Schedule EndDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>