force-app/main/default/objects/Preset_Filter__c/fields/InitialVisit_Schedule_StartDate__c.field-meta.xml
<CustomField>
    <fullName>InitialVisit_Schedule_StartDate__c</fullName>
    <description>Store the InitialVisit Schedule DateFrom of filter</description>
    <encryptionScheme>None</encryptionScheme>
    <label>InitialVisit Schedule StartDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>