force-app/main/default/objects/Preset_Filter__c/fields/Preset_Name__c.field-meta.xml
<CustomField>
    <fullName>Preset_Name__c</fullName>
    <description>This will store the Name of preset which will be unique for every user</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Preset Name</label>
    <type>TextArea</type>
</CustomField>