force-app/main/default/objects/Preset_Filter__c/fields/Sex__c.field-meta.xml
<CustomField>
    <fullName>Sex__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sex</label>
    <length>8</length>
    <type>Text</type>
</CustomField>