force-app/main/default/objects/Preset_Filter__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Store the Source of the filters</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Source</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>