force-app/main/default/objects/Preset_Filter__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Stores the status of the Fiters</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>