force-app/main/default/objects/Preset_Filter__c/fields/Study_Site_Id__c.field-meta.xml
<CustomField>
    <fullName>Study_Site_Id__c</fullName>
    <description>Store the Study Site Id of Filters</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Study Site Id</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>