force-app/main/default/objects/Preset_Filter__c/fields/StudyActive__c.field-meta.xml
<CustomField>
    <fullName>StudyActive__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>StudyActive</label>
    <length>30</length>
    <type>Text</type>
</CustomField>