force-app/main/default/objects/Preset_Filter__c/fields/StudyId__c.field-meta.xml
<CustomField>
    <fullName>StudyId__c</fullName>
    <description>Store the Study Id of the filter</description>
    <encryptionScheme>None</encryptionScheme>
    <label>StudyId</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>