force-app/main/default/objects/Preset_Filter__c/fields/User_Preset__c.field-meta.xml
<CustomField>
    <fullName>User_Preset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Will tell for which community user this preset is available</description>
    <label>User_Preset</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Preset_Filters</relationshipName>
    <type>Lookup</type>
</CustomField>