force-app/main/default/objects/Preset_Filter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Preset_Name__c</columns>
    <columns>User_Preset__c</columns>
    <columns>Default_Preset__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>